Fix font-size on mobile for home

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -310,7 +310,7 @@ body{
         background-position: center right;
         .col-8{width: 90% !important}
         .intro{
-            font-size: 3em !important;
+            font-size: 2.7em !important;
             margin-top: 55% !important;
         }
     }
